--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "axios": "^0.19.2",
+    "bootstrap": "^4.4.1",
+    "bootstrap-vue": "^2.13.0",
+    "vue": "^2.6.11",
+    "vue-router": "^3.0.1",
+    "vue-socket.io": "^3.0.7"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
