--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.13.0",
     "vue": "^2.6.11",
+    "vue-append": "^2.0.0",
     "vue-router": "^3.0.1",
     "vue-socket.io": "^3.0.7"
   },
